--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h3>Portfólio</h3>
 
             <p>
-                Primeiro caso de estudo para a transição de carreira ainda em 2026
+                Primeiro caso de estudo para a transição de carreira ainda em 2026. Adicionado mais um texto
             </p>
         </article>
     </section>
